@@ -45,8 +45,7 @@ class holland::mysqldump (
   # could cause backups to fail.  We'll include the +mysql+ package if it isn't defined elsewhere.
   if $ensure == 'present' {
     # FIXME Work around a bug in Puppet 2.6 that doesn't handle parsing arrays as the only argument to a function.
-    $missing_pkgs = [ 'mysql' ]
-    ensure_packages($missing_pkgs)
+    include ::mysql::client
   }
 
   # Install the mysqldump provider
